# parallel-mesh-simp-618

./: .gitignore  CMakeLists.txt  README.md
media/: beast.off
src/: CMU462.h  CMakeLists.txt  halfEdgeMesh.cpp  halfEdgeMesh.h  main.cpp  meshEdit.cpp  meshEdit.h  offFileManager.cpp  offFileManager.h
src/cuda_simplify/: cudaScan.cu  cudaSimplify.cu  cudaSort.cu  cycleTimer.c  cycleTimer.h  gpuSimplify.cpp  gpuSimplify.h
